# Movie-Recommendation-Engine

./: Capstone_Presentation.pptx  Makefile  README.md  data_processing.py  main.py  model.py  pyproject.toml  requirements.txt  train.py
Movie-Recommendation-Engine/: LICENSE  README.md
Movie-Recommendation-Engine/movie_recommender/: features.py
docs/: mkdocs.yml
docs/docs/: index.md
movie_recommender/: dataset.py  plots.py
movie_recommender/modeling/: predict.py  train.py
notebooks/: 1.0-jm-initial-data-exploration.ipynb  2.0-jm-exploratory-data-analysis.ipynb  2.0-jm-ncf.ipynb  3.0-jm-ncf.ipynb  NCF.ipynb  NCF.py  item_mapping.pkl  model.weights.h5  recommend.py  user_mapping.pkl
notebooks/NCF Local/: recommend.py
notebooks/NCF Local/NCF/: 2.0-jm-ncf.ipynb
notebooks/NCF Local/NCF/model/: checkpoint  model.ckpt.data-00000-of-00001  model.ckpt.index
