[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "movie_recommender"
version = "0.0.1"
description = "Movie recommendation engine using collaborative filtering and SVD techniques on the MovieLens 20M dataset."
authors = [
  { name = "John Maloney" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["movie_recommender"]
force_sort_within_sections = true
